tests/hook_syntax_compatibility/hook_syntax_compatibility.exp
Error ------------------------------------------------------------------------------------- syntax_compatibility.js:15:1

Cannot call hook [1] because React hooks can only be called within components or hooks. [react-rule-hook]

   syntax_compatibility.js:15:1
   15| useHook(); // Error
       ^^^^^^^^^

References:
   syntax_compatibility.js:15:1
   15| useHook(); // Error
       ^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- syntax_compatibility.js:42:5

Cannot call hook [1] because React hooks can only be called within components or hooks. [react-rule-hook]

   syntax_compatibility.js:42:5
   42|     useHook(); // Error
           ^^^^^^^^^

References:
   syntax_compatibility.js:42:5
   42|     useHook(); // Error
           ^^^^^^^ [1]


Error ------------------------------------------------------------------------------- syntax_compatibility_import.js:3:1

Cannot call hook [1] because React hooks can only be called within components or hooks. [react-rule-hook]

   syntax_compatibility_import.js:3:1
   3| useHook(); // Error
      ^^^^^^^^^

References:
   syntax_compatibility_import.js:3:1
   3| useHook(); // Error
      ^^^^^^^ [1]


Error ------------------------------------------------------------------------------ syntax_compatibility_import.js:27:5

Cannot call hook [1] because React hooks can only be called within components or hooks. [react-rule-hook]

   syntax_compatibility_import.js:27:5
   27|     useHook(); // Error
           ^^^^^^^^^

References:
   syntax_compatibility_import.js:27:5
   27|     useHook(); // Error
           ^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:20:5

Cannot call `useX` because number [1] is not a function. [not-a-function]

   test.js:20:5
   20|     useX(); // error for calling number but no hook error
           ^^^^

References:
   test.js:3:14
    3| const useX = 42;
                    ^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:24:5

Cannot call `useV` because a call signature declaring the expected parameter / return type is missing in module
`./exp2` [1]. [prop-missing]

   test.js:24:5
   24|     useV(); // error for calling module but no hook error
           ^^^^

References:
   exp2.js
   ^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:38:20

Cannot call hook [1] because React hooks can only be called within components or hooks. [react-rule-hook]

   test.js:38:20
   38| const c1 = () => { useH() }; // error
                          ^^^^^^

References:
   test.js:38:20
   38| const c1 = () => { useH() }; // error
                          ^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:40:41

Cannot call hook [1] because React hooks can only be called within components or hooks. [react-rule-hook]

   test.js:40:41
   40| const C3 = id(({}: {}, ref: mixed) => { useH() }); // error
                                               ^^^^^^

References:
   test.js:40:41
   40| const C3 = id(({}: {}, ref: mixed) => { useH() }); // error
                                               ^^^^ [1]



Found 8 errors
